--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,3 +1,9 @@
+@import '../fonts/HelveticaNeueCyr/font.css';
+body{
+  font-family: "HelveticaNeueCyr";
+  font-size: 16px;
+}
+
 h1, h2, h3, h4, h5, h6{
   line-height: 1em;
 }
