header markup added

--- a/src/pug/parts/_header.pug
+++ b/src/pug/parts/_header.pug
@@ -4,3 +4,8 @@
 
 +b.HEADER.header.row
     +e.container.container
+        +e.A(href="/").logo Регидрон био
+        
+        include _nav.pug
+        
+        +e.A(href="#").action-btn.btn_link купить
