--- a/src/pug/parts/_bemto.pug
+++ b/src/pug/parts/_bemto.pug
@@ -1,8 +1,7 @@
 include ../../../node_modules/bemto.pug/bemto.pug
--
-set_bemto_settings({
+//set_bemto_settings({
     element: '-',
     modifier: '--',
     output_element: '__',
     output_modifier: '_'
-})
+    })
