header styles added (no responsive)

--- a/src/pug/parts/_nav.pug
+++ b/src/pug/parts/_nav.pug
@@ -14,3 +14,6 @@
         
         +e.LI.list-item
             +e.A(href="#").link Дополнительно
+            
+        +e.LI.list-item_black
+            +e.A(href="#").link Купить
