--- a/src/assets/scss/_grid.scss
+++ b/src/assets/scss/_grid.scss
@@ -4,6 +4,7 @@
     padding: 0;
 }
 $paddings: 15px;
+$container-max-width: 1920px;
 body{
     font-size: 16px;
     width: 100vw;
@@ -37,7 +38,7 @@ body>.row, body>.row-flex{
 }
 .container{
     width: 100%;
-    max-width: 1170px;
+    max-width: $container-max-width;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
