main screen markup added

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,7 +7,6 @@
 @import 'header';
 @import 'nav';
 @import 'footer';
+@import 'b-main';
 @import 'page';
-@import 'forms';
-@import 'blocks';
-@import 'components';
+@import 'forms'; 
