--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -39,6 +39,10 @@ span.spacer{
     text-align: center;
 }
 
+b{
+    font-weight: 900;
+}
+
 .tdn{ text-decoration: none; }
 .uppercase{ text-transform: uppercase; }
 
