--- a/src/assets/scss/_b-main.scss
+++ b/src/assets/scss/_b-main.scss
@@ -1,12 +1,20 @@
 .main {
+    padding-bottom: 350px;
     &.row {}
     &__container {
-        padding-top: 100px;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 380px;
+        padding-left: 105px;
+        padding-right: 25px;
     }
     &__photo-and-sub {
         float: left;
     }
-    
     &__photo-wrpr {
         position: relative;
     }
@@ -14,45 +22,48 @@
         position: relative;
         z-index: 5;
     }
-    &__shadow {
+    &__shadow, &__plants-1, &__plants-2{
         position: absolute;
         z-index: 1;
+    }
+    &__shadow {
         width: 167%;
         height: auto;
         left: -7%;
         bottom: -8%;
     }
     &__plants-1 {
-        position: absolute;
-        z-index: 1;
+        width: 38%;
+        height: auto;
         top: 0;
         left: 6%;
         transform: translateY(-86%);
     }
     &__plants-2 {
-        position: absolute;
-        z-index: 1;
-            right: 0;
-    transform: translateX(99%);
-    bottom: 12%;
+        width: 23.7%;
+        height: auto;
+        right: 0;
+        transform: translateX(99%);
+        bottom: 12%;
     }
-    
+
     &__sub {
-        p {
-            b {
-                b {}
-                br {}
-            }
-            br {}
-        }
+        font-size: 1.25em;
+        padding-left: 6%;
+        margin-top: 4%;
+        line-height: 1.1em;
     }
-    &-desc {}
+    &-desc {
+        margin-top: -10px;
+    }
     &-desc__title {
-        p {}
-        br {}
+        font-size: 3.125em;
+        font-weight: 800;
+        line-height: 1.05em;
     }
     &-desc__subtitle {
-        p {}
-        br {}
+        font-size: 1.25em;
+        margin-top: 0.5em;
+        line-height: 1.05em;
     }
 }
