--- a/src/pug/blocks/_b-main.pug
+++ b/src/pug/blocks/_b-main.pug
@@ -8,7 +8,8 @@
                 +e.IMG(src="images/plants-2.png").plants-2
             +e.sub
                 p 
-                    b #[b Регидрон Био] – современное комбинированное средство #[b для детей от трёх лет] #[br]
+                    b #[b]Регидрон Био 
+                    |– современное комбинированное средство #[b для детей от трёх лет] #[br]
                     |или с массой тела от 12 кг, для устранения и профилактики #[br]
                     |обезвоживания и облегчения диареи и рвоты 
                     
@@ -19,12 +20,12 @@
                 p гипоосмолярный глюкозо-солевой раствор #[br]+ лактобактерии LGG
             +b.advantages
                 +e.item
-                    +e.I.icon-wrpr
+                    +e.I.icon-wrpr_clock
                         +e.img(src='images/icon-clocks.png').icon
                     +e.P.text сокращает #[br]продолжительность #[br]и выраженность диареи
                     
                 +e.item
-                    +e.I.icon-wrpr
+                    +e.I.icon-wrpr_drop
                         +e.img(src='images/icon-drop.png').icon
                     +e.P.text восстанавливает #[br]водно-солевой #[br]баланс
             
