--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,10 +1,9 @@
 doctype html
-include parts/_mixins.pug
 html(lang='RU-ru')
+    include parts/_mixins.pug
     +head('Главная')
     
     body
-        
         include parts/_header.pug
         
         main.row
@@ -14,6 +13,6 @@ html(lang='RU-ru')
         script(src='assets/libs/underscore/underscore-min.js')
         //script(src='assets/libs/mobile-detect/mobile-detect.min.js')
         //script(src='assets/js/responsive.js')
-        //script(src='assets/js/main.js')
+        script(src='assets/js/main.js')
         script.
             jQuery(function($) {});
