--- a/src/pug/parts/_header.pug
+++ b/src/pug/parts/_header.pug
@@ -7,3 +7,7 @@
         +e.A(href="/").logo Регидрон био
         
         include _nav.pug
+    .hamburger-wrpr
+            button(type="button").hamburger.hamburger--spring.js-hamburger
+                span.hamburger-box
+                    span.hamburger-inner
