--- a/src/assets/scss/_b-main.scss
+++ b/src/assets/scss/_b-main.scss
@@ -12,15 +12,18 @@
         padding-left: 105px;
         padding-right: 25px;
     }
-    &__photo-and-sub {
-        float: left;
-    }
+    &__photo-and-sub {}
     &__photo-wrpr {
         position: relative;
+        z-index: 1;
+        width: 100%;
+        max-width: 860px;
     }
     &__photo {
         position: relative;
-        z-index: 5;
+        z-index: 2;
+        width: 100%;
+        height: auto;
     }
     &__shadow, &__plants-1, &__plants-2{
         position: absolute;
