--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -2,10 +2,32 @@
     font-size: 1.68em;
     font-weight: 800;
     margin-right: 40px;
+    
+    flex-grow: 1;
+    width: 100%;
+    max-width: 1235px;
+    @media (max-width: 1100px){
+        margin-top: 20px;
+        margin-right: 0;
+    }
+    
+    @media (max-width: 700px) {
+        position: fixed;
+        background-color: transparentize($c-yellow, 0.2);
+        height: 100vh;
+        top: 80px;
+        margin-top: 0;
+        right: 0;
+        z-index: 10;
+        transition: 350ms;
+        transform: translateX(100%);
+        &.navigation_is-active{
+            transform: translateX(0);
+        }
+    }
     &__list {
         list-style: none;
         height: 100%;
-        width: 1235px;
         display: -webkit-flex;
         display: -moz-flex;
         display: -ms-flex;
@@ -14,6 +36,15 @@
         justify-content: space-between;
         text-transform: lowercase;
         align-items: stretch;
+        width: 100%;
+        @media (max-width: 700px){
+            height: auto;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: flex-start;
+            padding: 25px;
+            font-size: 1.25em;
+        }
     }
     &__list-item {
         display: -webkit-flex;
@@ -25,6 +56,9 @@
         padding-bottom: 0.2em;
         &:first-child{ margin-left: 0; }
         &:last-child{ margin-right: 0; }
+        @media (max-width: 1100px){
+            padding-bottom: 20px;
+        }
     }
     &__list-item_active {}
     &__list-item_black {
@@ -32,5 +66,15 @@
     }
     &__link {
         &:hover {}
+    }
+}
+
+.hamburger-wrpr{
+    position: absolute;
+    z-index: 5;
+    right: 20px;
+    top: 25px;
+    @media (min-width: 700px) {
+        display: none;
     }
 }
