--- a/src/assets/scss/_b-main.scss
+++ b/src/assets/scss/_b-main.scss
@@ -7,12 +7,43 @@
         display: -ms-flex;
         display: -o-flex;
         display: flex;
+        padding-top: 250px;
         justify-content: space-between;
-        padding-top: 380px;
-        padding-left: 105px;
-        padding-right: 25px;
+        @media (min-width: 1800px) {
+            padding-left: 105px;
+            padding-right: 25px;
+            padding-top: 380px;
+        }
+        @media (max-width: 1200px) {
+            padding-top: 150px;
+        }
+        @media (max-width: 980px){
+            flex-wrap: wrap;
+            padding-top: 200px;
+        }
+        
     }
-    &__photo-and-sub {}
+    &__photo-and-sub {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        flex-direction: column;
+        
+        @media (max-width: 1750px) {
+            width: 650px;
+        }
+        @media (max-width: 1400px) {
+            width: 500px;
+        }
+        @media (max-width: 1200px) {
+            width: 380px;
+        }
+        @media (max-width: 980px) {
+            width: 60%;;
+        }
+    }
     &__photo-wrpr {
         position: relative;
         z-index: 1;
@@ -58,6 +89,16 @@
     }
     &-desc {
         margin-top: -10px;
+        @media (max-width: 1750px){
+            font-size: 0.85em;
+        }
+        @media (max-width: 1200px){
+            font-size: 0.7em;
+        }
+        @media (max-width: 980px) {
+            margin-top: 50px;
+            padding-left: 3%;
+        }
     }
     &-desc__title {
         font-size: 3.125em;
