--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -2,15 +2,13 @@
     font-size: 1.68em;
     font-weight: 800;
     margin-right: 40px;
-    
     flex-grow: 1;
     width: 100%;
     max-width: 1235px;
-    @media (max-width: 1100px){
+    @media (max-width: 1100px) {
         margin-top: 20px;
         margin-right: 0;
     }
-    
     @media (max-width: 700px) {
         position: fixed;
         background-color: transparentize($c-yellow, 0.2);
@@ -21,7 +19,7 @@
         z-index: 10;
         transition: 350ms;
         transform: translateX(100%);
-        &.navigation_is-active{
+        &.navigation_is-active {
             transform: translateX(0);
         }
     }
@@ -37,7 +35,8 @@
         text-transform: lowercase;
         align-items: stretch;
         width: 100%;
-        @media (max-width: 700px){
+        position: relative;
+        @media (max-width: 700px) {
             height: auto;
             flex-direction: column;
             align-items: flex-end;
@@ -54,9 +53,15 @@
         display: flex;
         align-items: center;
         padding-bottom: 0.2em;
-        &:first-child{ margin-left: 0; }
-        &:last-child{ margin-right: 0; }
-        @media (max-width: 1100px){
+        padding-left: 8px;
+        padding-right: 8px;
+        &:first-child {
+            margin-left: 0;
+        }
+        &:last-child {
+            margin-right: 0;
+        }
+        @media (max-width: 1100px) {
             padding-bottom: 20px;
         }
     }
@@ -67,9 +72,17 @@
     &__link {
         &:hover {}
     }
+    #underline {
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+//        width: 100px;
+        background-color: #fff;
+        height: 20px;
+    }
 }
 
-.hamburger-wrpr{
+.hamburger-wrpr {
     position: absolute;
     z-index: 5;
     right: 20px;
