images async loading added incoming animations added

--- a/src/pug/blocks/_b-main.pug
+++ b/src/pug/blocks/_b-main.pug
@@ -2,10 +2,10 @@
     +e.container.container
         +e.photo-and-sub
             +e.photo-wrpr
-                +e.IMG(src="images/Pack.png").photo
-                +e.IMG(src="images/shadow.png").shadow
-                +e.IMG(src="images/plants-1.png").plants-1
-                +e.IMG(src="images/plants-2.png").plants-2
+                +e.IMG(data-src="images/Pack.png").photo
+                +e.IMG(data-src="images/shadow.png").shadow
+                +e.IMG(data-src="images/plants-1.png").plants-1
+                +e.IMG(data-src="images/plants-2.png").plants-2
             +e.sub
                 p 
                     b #[b]Регидрон Био 
