--- a/src/pug/parts/_head.pug
+++ b/src/pug/parts/_head.pug
@@ -2,3 +2,4 @@ head
     meta(charset='UTF-8')
     title!= title
     link(rel='stylesheet', href='assets/css/style.css')
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js")
