php integration added

--- a/src/pug/blocks/_b-main.pug
+++ b/src/pug/blocks/_b-main.pug
@@ -2,31 +2,29 @@
     +e.container.container
         +e.photo-and-sub
             +e.photo-wrpr
-                +e.IMG(data-src="images/Pack.png").photo
+                +e.IMG(data-src="images/Pack.png", src="").photo
                 +e.IMG(data-src="images/shadow.png").shadow
                 +e.IMG(data-src="images/plants-1.png").plants-1
                 +e.IMG(data-src="images/plants-2.png").plants-2
             +e.sub
-                p 
-                    b #[b]Регидрон Био 
-                    |– современное комбинированное средство #[b для детей от трёх лет] #[br]
+                p #[b Регидрон Био] – современное комбинированное средство #[b для детей от трёх лет] #[br]
                     |или с массой тела от 12 кг, для устранения и профилактики #[br]
                     |обезвоживания и облегчения диареи и рвоты 
                     
         +b.main-desc
             +e.title
-                p комплексное решение #[br]при детской диарее
+                h1 комплексное решение #[br]при детской диарее
             +e.subtitle
                 p гипоосмолярный глюкозо-солевой раствор #[br]+ лактобактерии LGG
             +b.advantages
                 +e.item
                     +e.I.icon-wrpr_clock
-                        +e.img(src='images/icon-clocks.png').icon
+                        +e.IMG(data-src='images/icon-clocks.png').icon
                     +e.P.text сокращает #[br]продолжительность #[br]и выраженность диареи
                     
                 +e.item
                     +e.I.icon-wrpr_drop
-                        +e.img(src='images/icon-drop.png').icon
+                        +e.IMG(data-src='images/icon-drop.png').icon
                     +e.P.text восстанавливает #[br]водно-солевой #[br]баланс
             
         
