--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,7 +10,5 @@ html(lang='RU-ru')
             include blocks/_b-main.pug
         
         script(src='assets/libs/jquery/jquery-3.3.1.min.js')
-        script(src='assets/libs/underscore/underscore-min.js')
-        //script(src='assets/libs/mobile-detect/mobile-detect.min.js')
-        //script(src='assets/js/responsive.js')
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js")
         script(src='assets/js/main.js')
