--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -55,6 +55,8 @@
         padding-bottom: 0.2em;
         padding-left: 8px;
         padding-right: 8px;
+        position: relative;
+        z-index: 2;
         &:first-child {
             margin-left: 0;
         }
@@ -74,8 +76,9 @@
     }
     #underline {
         position: absolute;
-        bottom: -2px;
+        bottom: 0;
         left: 0;
+        z-index: 1;
 //        width: 100px;
         background-color: #fff;
         height: 20px;
