--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -6,12 +6,13 @@ body{
 
 h1, h2, h3, h4, h5, h6{
   line-height: 1em;
+  font-weight: 800;
 }
 h1{
-    font-size: 4em;
+    font-size: 3.125em;
 }
 h2{
-    font-size: 3em;
+    font-size: 2.7em;
 }
 h3{
     font-size: 2.5em;
