some responsive fixes

--- a/src/assets/scss/_elements.scss
+++ b/src/assets/scss/_elements.scss
@@ -34,7 +34,7 @@
             margin-right: 20px;
         }
     }
-    &__img {
+    &__icon {
         width: 100%;
         height: auto;
     }
