--- a/src/assets/scss/_b-main.scss
+++ b/src/assets/scss/_b-main.scss
@@ -41,7 +41,7 @@
             width: 380px;
         }
         @media (max-width: 980px) {
-            width: 60%;;
+            width: 100%;;
         }
     }
     &__photo-wrpr {
@@ -49,6 +49,9 @@
         z-index: 1;
         width: 100%;
         max-width: 860px;
+        @media (max-width: 980px) {
+            width: 60%;;
+        }
     }
     &__photo {
         position: relative;
