--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -66,6 +66,16 @@
         @media (max-width: 1100px) {
             padding-bottom: 20px;
         }
+        @media (max-width: 700px){
+            &_active{
+                border-bottom: solid 5px white;
+                padding-bottom: 0.1em;
+                padding-left: 0;
+                padding-right: 0;
+            }
+            margin-bottom: 0.6em;
+        }
+        
     }
     &__list-item_active {}
     &__list-item_black {
@@ -79,9 +89,11 @@
         bottom: 0;
         left: 0;
         z-index: 1;
-//        width: 100px;
         background-color: #fff;
         height: 20px;
+        @media (max-width: 700px){
+            display: none;
+        }
     }
 }
 
